[package]
name = "imgst"
version = "0.1.0"
edition = "2024"

authors = ["murilo ijanc' <murilo@ijanc.org>"]
categories = ["image"]
homepage = "https://ijanc.org"
keywords = ["image", "jpg", "sanitization"]
license = "ISC"
repository = "https://got.ijanc.org/?action=summary&path=imgst"
description = "Simple Image metadata cleaner"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
env_logger = "0.11.8"
ignore = "0.4.25"
log = "0.4.28"
web-image-meta = "0.2.1"

[profile.dev]
debug = false

[profile.test]
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.coverage]
inherits = "release"
opt-level = 2
codegen-units = 256
lto = "thin"
debug-assertions = true
overflow-checks = true

[profile.dev-no-debug-assertions]
inherits = "dev"
debug-assertions = false
